--- a/index.html
+++ b/index.html
@@ -650,7 +650,28 @@
             </div>
         </div>
     </div>
+    <!-- Simple Chatbot Page -->
+    <div id="chatbot-page" class="page">
+        <h1>Chatbot</h1>
 
+        <div class="chat-container">
+            <!-- Bot message -->
+            <div class="chat-message bot-message">
+                <div class="message-bubble">Hi. I am a chatbot. How can I help you?</div>
+            </div>
+
+            <!-- User message -->
+            <div class="chat-message user-message">
+                <div class="message-bubble">HMW90, can't connect</div>
+            </div>
+
+            <!-- Bot response -->
+            <div class="chat-message bot-message">
+                <div class="message-bubble">Can you please explain the problem in more detail? Do you see any error
+                    messages?</div>
+            </div>
+        </div>
+    </div>
 
 
     <script src="script.js"></script>
