more minor fixes2

--- a/index.html
+++ b/index.html
@@ -221,12 +221,16 @@
             <img src="images/chart3.png" alt="Chart" class="chart-image">
         </div>
         <div class="log-container">
-            <p id="history-log">History log <span class="see-more-history">See more</span></p>
-            <p id="history-log-2" class="hidden">20.02.2024 11:22 sensor HMD60 installed in building A hall 2 by Matti,
+            <!--<p id="history-log">History logs <span class="see-more-history">See more</span><i class="ph-bold ph-caret-down"></i></p>-->
+            <p id="history-log">History logs <i class="ph-bold ph-caret-down toggle-history"></i></p>
+            <p id="history-log-2" class="hidden"><strong>20.02.2024 11:22</strong><br> sensor HMD60 installed
+                in building A hall 2 by Matti,
                 Company X<br>
-                20.02.2025 12:22 NFC connection established with Huawei 12<br>
-                20.02.2025 12:22 NFC connection timeout<br>
-                20.02.2025 12:25 maintained by Matti, Company X. Temperature values were adjusted by 0.07 C</p>
+                <strong>20.02.2025 12:11</strong><br> NFC connection established with Huawei 12<br>
+                <strong>20.02.2025 12:22</strong><br> NFC connection timeout<br>
+                <strong>20.02.2025 12:25</strong><br> Planned maintenance. Temperature values were
+                adjusted by 0.07 C by Matti, Company X
+            </p>
         </div>
         <div class="button-row">
             <button id="calibration-back-btn" class="btn btn-secondary">Back</button>
