--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     </div>
     <!-- Calibration Page -->
     <div id="calibration-page" class="page">
-        <h1>Current values</h1>
+        <h1>Sensor dashboard</h1>
         <!--<p>Values for the last 48 hours</p>-->
 
         <div class="calibration-container">
