--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <div class="device-text">
                     <p id="device_name">HMW90</p>
                     <p id="device_name_2"> HMD60929192298y298</p>
-                    <p><span class="status-dot"></span>Connected to sensor</p>
+                    <p id="connected-to-sensor"><span class="status-dot"></span>Connected to sensor</p>
                 </div>
             </div>
         </div>
@@ -223,14 +223,24 @@
         <div class="log-container">
             <!--<p id="history-log">History logs <span class="see-more-history">See more</span><i class="ph-bold ph-caret-down"></i></p>-->
             <p id="history-log">History logs <i class="ph-bold ph-caret-down toggle-history"></i></p>
-            <p id="history-log-2" class="hidden"><strong>20.02.2024 11:22</strong><br> sensor HMD60 installed
-                in building A hall 2 by Matti,
-                Company X<br>
-                <strong>20.02.2025 12:11</strong><br> NFC connection established with Huawei 12<br>
-                <strong>20.02.2025 12:22</strong><br> NFC connection timeout<br>
-                <strong>20.02.2025 12:25</strong><br> Planned maintenance. Temperature values were
-                adjusted by 0.07 C by Matti, Company X
-            </p>
+            <div id="history-log-2" class="hidden">
+                <div class="log-event">
+                    <strong>20.02.2024 11:22</strong><br>
+                    sensor HMD60 installed in building A hall 2 by Matti, Company X
+                </div>
+                <div class="log-event">
+                    <strong>20.02.2025 12:11</strong><br>
+                    NFC connection established with Huawei 12
+                </div>
+                <div class="log-event">
+                    <strong>20.02.2025 12:22</strong><br>
+                    NFC connection timeout
+                </div>
+                <div class="log-event">
+                    <strong>20.02.2025 12:25</strong><br>
+                    Planned maintenance. Temperature values were adjusted by 0.07 C by Matti, Company X
+                </div>
+            </div>
         </div>
         <div class="button-row">
             <button id="calibration-back-btn" class="btn btn-secondary">Back</button>
@@ -322,7 +332,7 @@
     </div>
     <!-- Maintenance Plan Options Page -->
     <div id="maintenance-plan-page" class="page">
-        <h1>Maintenance Plan</h1>
+        <h1>Maintenance plan</h1>
 
         <div class="radio-options-container">
             <div class="radio-option">
@@ -354,12 +364,12 @@
                 <option value="" disabled selected>Choose interval</option>
                 <option value="6">Every 6 months</option>
                 <option value="12">Every 12 months</option>
-                <option value="other">Other period</option>
+                <option value="other">Other interval</option>
             </select>
         </div>
 
         <div id="custom-interval-container" class="form-group hidden">
-            <label for="custom-interval">Custom interval (months)</label>
+            <label for="custom-interval">Enter maintenance interval (months)</label>
             <input type="number" id="custom-interval" min="1" max="60" value="3">
         </div>
 
