--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
         </div>
 
         <div id="custom-interval-container" class="form-group hidden">
-            <label for="custom-interval">Enter maintenance interval (months)</label>
+            <label for="custom-interval">Enter interval (months)</label>
             <input type="number" id="custom-interval" min="1" max="60" value="3">
         </div>
 
